# python-embedded-debezium-engine

./: .env-exaample  .gitignore  LICENSE  README.md  postgresql.conf  pyproject.toml
config/: config.yaml
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  init.sql
scripts/: download_jars.sh
src/db_sync/: __init__.py  __main__.py
src/db_sync/connectors/: __init__.py  base.py  factory.py  mysql.py  postgres.py
src/db_sync/core/: __init__.py  config.py  debezium_engine.py  engine.py
src/db_sync/handlers/: cdc_handler.py  initial_load.py  schema_handler.py
src/db_sync/models/: change_event.py  schema.py
src/db_sync/utils/: logger.py  retry.py  schema_converter.py
tests/: conftest.py
tests/integration/: test_sync_flow.py
tests/unit/: test_connectors.py  test_handlers.py  test_models.py
